# temaddtoplaylist

./: Makefile  Makefile.am  Makefile.in  README  config.h  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.am.bak  Makefile.in  libtotemaddtoplaylist-0.1.pc  libtotemaddtoplaylist-0.1.pc.in  main.c  totemaddtoplaylist.h
src/.deps/: main.Plo
